[metadata]
name = pixels-data-conversion-LuukHenk
version = 0.1.4
author = LuukHenk
description = A tool for converting Pixels json data to other formats
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuukHenk/pixels_json_to_csv
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

